# TStack_TQueue

./: CMakeLists.txt  TStack_TQueue.slnx  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake-tests.yml
TStack_TQueue/: TStack_TQueue.vcxproj  TStack_TQueue.vcxproj.filters
src/: TQueue.h  TStack.h
tests/: test_tqueue.cpp  test_tstack.cpp
